@@ -214,6 +214,9 @@
 
  Here are the modes which can be set:
 
+	-cpara >#!;*/%
+				Characters which can indent paragraphs.
+
 	-encoding name		Set file coding (for example: utf-8, iso-8859-15)
 
 	-syntax name		Specify syntax (syntax file called
