@@ -1,3 +1,7 @@
+- You can now define which characters can indent paragraphs.  Also the
+  default list has been reduced so that formatting of TeX/LaTeX files works
+  better.
+
 - Highlighting now uses less CPU time.  Here is a CPU usage comparison for
   scrolling forwards and backwards through a 35K like C file:
 
